--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
+    overflow-anchor: none;
 }
 
 #h1_index,
